Fix spacings

--- a/src/fragments/Features/style.css
+++ b/src/fragments/Features/style.css
@@ -119,7 +119,7 @@
       line-height: 1.13;
       letter-spacing: -0.5px;
       text-align: center;
-      margin-bottom: 80px;
+      margin-bottom: 48px;
     }
   }
 
